add swagger example
